--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -43,6 +43,10 @@
       text-decoration: inherit;
     }
 
+    #tituloLogo {
+      margin-top: 2em;
+    }
+
     #logoPosition {
       float: right;
       padding-top: 1em;
